--- a/our_frontend/templates/index.html
+++ b/our_frontend/templates/index.html
@@ -1,103 +1,24 @@
-<!DOCTYPE html>
-<!-- saved from url=(0053)https://getbootstrap.com/docs/4.1/examples/dashboard/ -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="">
-	<meta name="author" content="">
-	<link rel="icon" href="https://getbootstrap.com/docs/4.1/assets/img/favicons/favicon.ico">
+{% extends "base.html" %}
 
-	<title>Whiteboard</title>
+{% block description %}
+<h4>Assignment Details</h4>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p>Due: 1971-01-01 00:00PM</p>
 
-	<link rel="canonical" href="https://getbootstrap.com/docs/4.1/examples/dashboard/">
+<br>
 
-	<!-- Bootstrap core CSS -->
-	<link href="./resource/bootstrap.min.css" rel="stylesheet">
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+{% endblock %}
 
-	<!-- fontawesome -->
-	<script src="https://kit.fontawesome.com/4dc0d17132.js" crossorigin="anonymous"></script>
-
-	<link rel="stylesheet"
-	  href="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.3.1/styles/default.min.css">
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.3.1/highlight.min.js"></script>
-
-	<link rel="stylesheet" type="text/css" href="./resource/atom-one-dark.css">
-	<!-- Custom styles for this template -->
-	<link href="./resource/dashboard.css" rel="stylesheet">
-	
-  <body>
-	<nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-	  <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="https://getbootstrap.com/docs/4.1/examples/dashboard/#">Whiteboard</a>
-	  
-	  <ul class="navbar-nav px-3">
-		<li class="nav-item text-nowrap">
-		  <a class="nav-link" href="https://getbootstrap.com/docs/4.1/examples/dashboard/#">Sign out</a>
-		</li>
-	  </ul>
-	</nav>
-
-	<div class="container-fluid content">
-	  <div class="row">
-		<nav class="col-md-2 d-none d-md-block bg-light sidebar">
-		  <div class="sidebar-sticky">
-			<ul class="nav flex-column">
-			  <li class="nav-item">
-				<a class="nav-link" href="#">
-					<i class="fas fa-home"></i>
-					Dashboard 
-				</a>
-			  </li>
-			  <li class="nav-item">
-				<a class="nav-link active" href="#">
-					<i class="far fa-folder"></i>
-					Assignments
-				</a>
-			  </li>
-			  <li class="nav-item">
-				<a class="nav-link" href="./gradebook.html">
-					<i class="far fa-clipboard"></i>
-					Grades
-				</a>
-			  </li>
-			</ul>
-		  </div>
-		</nav>
-
-		<main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-			<div class="jumbotron row">
-				<div class="col-md" id="description">
-					<h4>Assignment Details</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					<p>Due: 1971-01-01 00:00PM</p>
-
-					<br>
-					
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					
-				</div>
-				<div class="col-md">
-					<form>
-						<div class="form-group">
-						  <label for="exampleFormControlFile1">Example file input</label>
-						  <input type="file" class="form-control-file" id="exampleFormControlFile1">
-						</div>
-					</form>
-					<div class="input-group mt-3">
-						<button class="btn btn-secondary">Submit</button>
-					</div>
-					
-				</div>
-			</div>
-		</main>
-	  </div>
+{% block submission %}
+<form>
+	<div class="form-group">
+	  <label for="exampleFormControlFile1">Example file input</label>
+	  <input type="file" class="form-control-file" id="exampleFormControlFile1">
 	</div>
-
-	<!-- Bootstrap core JavaScript
-	================================================== -->
-	<!-- Placed at the end of the document so the pages load faster -->
-	<script src="./resource/jquery-3.3.1.slim.min.js.download"></script>
-	<script src="./resource/popper.min.js.download"></script>
-	<script src="./resource/bootstrap.min.js.download"></script>
-	<script>hljs.initHighlightingOnLoad();</script>
-</body></html>
+</form>
+<div class="input-group mt-3">
+	<button class="btn btn-secondary">Submit</button>
+</div>
+{% endblock %}
