--- a/project/templates/gradebook.html
+++ b/project/templates/gradebook.html
@@ -1,6 +1,5 @@
-<!-- templates/profile.html -->
-
 {% extends "base.html" %}
+{% set active_page = "gradebook" %}
 
 {% block content %}
 <h1 class="title">
