--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="Whiteboard Signin">
 
-	<title>Signin Template for Bootstrap</title>
+	<title>Whiteboard Sign In</title>
 
 	<!-- Bootstrap core CSS -->
 	<link rel="stylesheet" href="{{ url_for('static', filename='stylesheets/bootstrap.min.css') }}" >
