--- a/project/templates/assignment1.html
+++ b/project/templates/assignment1.html
@@ -17,15 +17,16 @@
     </div>
     <!-- Assignment Submission Section -->
     <div class="col-md" id="submission">
-        <form>
+        <form action="/submit" method="POST" enctype="multipart/form-data">
             <div class="form-group">
-              <label for="exampleFormControlFile1">Example file input</label>
-              <input type="file" class="form-control-file" id="exampleFormControlFile1">
+                <label for="exampleFormControlFile1">Example file input</label>
+                <input type="file" name="file" class="form-control-file" id="exampleFormControlFile1">
+                <div class="input-group mt-3">
+                    <button class="btn btn-secondary">Submit</button>
+                </div>
             </div>
         </form>
-        <div class="input-group mt-3">
-            <button class="btn btn-secondary">Submit</button>
-        </div>
+        
     </div>
 </div>
 {% endblock %}
