--- a/project/templates/assignments.html
+++ b/project/templates/assignments.html
@@ -4,9 +4,8 @@
 
 {% block content %}
 <div class="jumbotron">
-	<!-- A example assignment card -->
+	<!-- Here we give an example assignment card, follow this format to add more assignments-->
 	<div class="card" style="width: 18rem;">
-		<div class="card-head">Assignment 3</div>
 		<div class="card-body">
 			<h5 class="card-title">Assignment 3 Title</h5>
 			<h6 class="card-subtitle mb-2 text-muted">Example due date: 12/21/2020</h6>
