--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -56,6 +56,13 @@
 		</nav>
 
 		<main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+            {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    <div class="alert alert-success">
+                        {{ messages[0] }}
+                    </div>
+                {% endif %}
+            {% endwith %}
 			{% block content %}
 			{% endblock %}
 		</main>
