added CSP meta tag

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -5,14 +5,11 @@
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="Homework Assignment Grading System">
-	
+	<meta http-equiv="Content-Security-Policy" content="default-src 'self';">
 	<title>Whiteboard</title>
 
 	<!-- Bootstrap core CSS -->
 	<link href="{{ url_for('static', filename='stylesheets/bootstrap.min.css') }}" rel="stylesheet">
-
-	<!-- fontawesome -->
-	<script src="https://kit.fontawesome.com/4dc0d17132.js" crossorigin="anonymous"></script>
 
 	<!-- Custom styles for this template -->
 	<link href="{{ url_for('static', filename='stylesheets/dashboard.css') }}" rel="stylesheet">
